# ArchBot

./: .gitignore  CLAUDE.md  eslint.config.mjs  function-map.xlsx  function-map.yml  index.html  note.md  package-lock.json  package.json  playwright.config.ts  playwright.native.config.ts  prd.md  prd.yml  req.yml  skills-lock.json  tech.yml  vite.config.ts  vitest.config.ts  ~$function-map.xlsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/''/: .claude.json
src-tauri/''/.claude/backups/: .claude.json.backup.1780235505286
src-tauri/capabilities/: default.json
src-tauri/config/: runtimes.default.yml
src-tauri/plugins/playwright/: Cargo.toml
src-tauri/plugins/playwright/src/: bridge.rs  http.rs  mod.rs
src-tauri/src/: ai_config.rs  context.rs  data_standard.rs  digital_employee.rs  lancedb_store.rs  lib.rs  license.rs  main.rs  resource.rs  scenario.rs  server.rs  trace.rs
src-tauri/src/agent_runtime/: adapter_manager.rs  agent_config_handler.rs  audit.rs  config.rs  context_assembly.rs  event_stream.rs  file_control.rs  home_setup.rs  launcher.rs  launcher_design.md  mod.rs  runtime_config.rs  session_manager.rs  shell_control.rs  skill_discovery.rs  skill_installer.rs  turn_config.rs  turn_executor.rs  version_manager.rs
src-tauri/src/business_flow/: conductor.rs  handler.rs  mod.rs  model.rs  validation.rs
src-tauri/src/db/: local_sqlite.rs  mod.rs  remote_mysql.rs
src-tauri/src/db/entities/: agent.rs  agent_adapter.rs  agent_artifact.rs  agent_audit_log.rs  agent_context_snapshot.rs  agent_decision.rs  agent_event.rs  agent_file_change.rs  agent_runtime.rs  agent_runtime_version.rs  agent_session.rs  agent_turn.rs  approval_queue.rs  (+8 more)
src-tauri/src/fs/: local.rs  mod.rs  remote.rs
src-tauri/src/handlers/: agent_handler.rs  context_handler.rs  db_handler.rs  de_handler.rs  ds_handler.rs  fs_handler.rs  license_handler.rs  mod.rs  project_handler.rs  scenario_handler.rs  settings_handler.rs  vector_handler.rs
src-tauri/src/secret/: mod.rs
src-tauri/src/vector/: local_vector.rs  mod.rs  remote_vector.rs
(+311 files in other folders)
