[package]
name = "archbot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "archbot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-playwright = { path = "plugins/playwright", optional = true }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
chrono = "0.4"
sha2 = "0.10"
rsa = "0.9"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
hostname = "0.4"
lancedb = "0.17"
arrow-array = "53"
arrow-schema = "53"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
url = "2.5.8"

[features]
e2e-test = ["tauri-plugin-playwright"]

