[package]
name = "tauri-plugin-playwright"
version = "0.1.0"
edition = "2021"
description = "Playwright bridge plugin for Tauri v2 — enables E2E testing of native windows via HTTP"

[lib]
path = "src/mod.rs"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["v4"] }
